test/loopFixedPoint5.slq

def main(){
	x := 0:ğ”¹;
	for i in [0..10){
		forget(x); // error
		x := H(0:ğ”¹);
	}
	return x;
}
